fixed small overflow bug

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 .p-table {
   display: block;
   width: 100%;
-  overflow: scroll;
+  overflow-y: auto;
 
   margin-top: 1rem;
 }
